# esphome-philips-ep2231

./: .pre-commit-config.yaml  README.md  example.yaml  protocol.md  pyproject.toml
components/philips_action_button/: action_button.cpp  action_button.h  button.py
components/philips_power_switch/: power.cpp
components/philips_series_2200/: __init__.py  philips_series_2200.cpp  philips_series_2200.h  status_parser.h
components/philips_series_2200/button/: __init__.py  action_button.cpp  action_button.h
components/philips_series_2200/switch/: __init__.py  power.cpp  power.h
components/philips_series_2200/text_sensor/: __init__.py  status_sensor.cpp  status_sensor.h
components/philips_status_sensor/: status_sensor.cpp
