[tool.poetry]
name = "esphome-philips-ep2231"
version = "0.1.0"
description = ""
authors = ["Thies Gerken <thies@thiesgerken.de>"]
readme = "README.md"
packages = [{include = "esphome_philips_ep2231"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
esphome = ">=2023.2.4"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
